2010-11-18  Steve Dodier <sidnioulz@gmail.com>
	* Check for volume channels before getting a GStreamer track's volume (fixes lp #667617)

2010-11-18  Steve Dodier <sidnioulz@gmail.com>
	* Add a value check incase a GStreamer track has a volume range of 0 (fixes lp #624520)

2010-11-18  Steve Dodier <sidnioulz@gmail.com>
	* Fix xfce4-volumed.desktop's exec argument (fixes lp #538407)

2010-11-02  Steve Dodier <sidnioulz@gmail.com>
	* Bind all variants of the volume keys with modifiers (fixes lp #665146)

2010-06-07  Jérôme Guelfucci <jeromeg@xfce.org>
	* Use libkeybinder instead of libxcb for key grabbing

2009-11-05  Steve Dodier <sidnioulz@gmail.com>

	* Use xfce4-dev-tools
	* Now show the actual current volume with a mute icon when muting the volume
	* Make sure the desktop file uses the correct prefix for its Exec value
	* Fix a bug with sound cards without device names
	* Use the low volume icon when volume is 0%, instead of the muted one
	* Prevent a crash if there is no XF86Volume key on the system

2009-10-31  Steve Dodier <sidnioulz@gmail.com>

	* Add debug messages when a key is pressed
	* Turn icon names into XDG-compliant names
	* Remove x-canonical-private-synchronous from needed caps for gauge-based notifications

2009-10-28  Steve Dodier <sidnioulz@gmail.com>

	* Fix a build error with --disable-libnotify, patch from Ṣalāḥ ad-Dīn Yūsuf ibn Ayyūb

2009-10-27  Steve Dodier <sidnioulz@gmail.com>

	* Support for asynchronous libnotify daemons
	* Move support for legacy libxcb-keysyms to the main branch with a build toggle
	
2009-09-04  Steve Dodier <sidnioulz@gmail.com>

	* Volume initialisation now includes mute check
	* Fixed a bug in volume calculation due to float truncating
	* Replaced g_utf8_collate by g_strcmp0. Less accurate but at least doesn't corrupt strings
	* Removed obsolete code
	* Fixed an error preventing from building without libnotify

2009-09-03  Steve Dodier <sidnioulz@gmail.com>
